# alex-amcn-test-28

./: .env.example  .gitignore  .plan  Cargo.toml  PRODUCT.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: button.tsx  card.tsx
migrations/: 20260517032000_create_nodes_and_relationships.down.sql  20260517032000_create_nodes_and_relationships.up.sql  README.md
seed/: README.md
server/: Cargo.toml
server/src/: config.rs  db.rs  domain.rs  executor.rs  graph.rs  lexer.rs  lib.rs  main.rs  parser.rs
